--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Resume</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
 		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 		<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     </head>
