--- a/index.html
+++ b/index.html
@@ -10,6 +10,61 @@
         <link rel="stylesheet" href="style.css">
 		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 		<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+		<style>
+			
+header {
+    text-align: center;
+    margin: auto 2em;
+}
+header h1{
+    letter-spacing: 20px;
+}
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-size: 12px; */
+    max-width: 960px;
+    margin: auto;
+}
+section {
+    margin: auto 1em 4em 2em;
+}
+
+i {
+    margin-right: .5em;
+}
+
+p {
+    margin: .2em auto
+}
+
+hr {
+    border: none;
+    background-color: lightgray;
+    height: 1px;
+}
+
+h1, h2, h3 {
+    font-weight: 100;
+    margin-bottom: 0;
+}
+
+#contact a{
+    display: block;
+    color: black;
+    text-align: start;
+    font-size: 17px;
+    margin-top: 5px;
+}
+#contact a:hover{
+    color: red;
+}
+
+main{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+		</style>
     </head>
     <body>
         <header id="header">
